fixed sign up page alignment

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -265,7 +265,7 @@ button:hover {
   color: white;
   margin-right: 25%;
   margin-left: 25%;
-  margin-top: 50px;
+  margin-top: 10px;
 }
 
 #sign_in {
